--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Families -- Fiction'
 - !lcsh 'Netherlands -- Fiction'
+- GITenberg
 title: Dr. Adriaan
 url: http://www.gutenberg.org/ebooks/34761
